Cluster K8s/deployement/client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crudclient
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crudapp
  template:
    metadata:
      labels:
        app: crudapp
    spec:
      imagePullSecrets:
        - name: prvrg
      containers:
        - name: appclient
          image: 192.168.1.12:8083/angular_client:latest
          ports:
            - containerPort: 80
          imagePullPolicy: Always
---
apiVersion: v1                
kind: Service                 
metadata:                     
  name: crudclient
  labels:                     
    app: crudapp
    tier: frontend
spec:
  type: NodePort               
  selector:
    app: crudapp  
  ports:                      
  - port: 80
    protocol: TCP
    targetPort: 80
