Cluster K8s/deployement/mysql_dep.yml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: crudmysql
  labels: 
    app: crudapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crudapp
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: crudapp
        tier: mysql
    spec:
      containers:
      - image: mysql:latest
        name: mysql
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: crudmysql
  labels: 
    app: crudapp
spec:
  type: NodePort
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: crudapp
    tier: mysql
