Cluster K8s/deployement/nginx_controller.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: ingress-nginx
  template:
    metadata:
      labels:
        app: ingress-nginx
    spec:
      serviceAccount: nginx
      hostNetwork: true
      containers:
        - name: nginx-ingress-controller
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.31.1
          imagePullPolicy: Always
          args:
            - /nginx-ingress-controller
            - --default-backend-service=default/default-http-backend
          ports:
          - containerPort: 80
            hostPort: 80
            protocol: TCP
          livenessProbe: 
            httpGet: 
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 300
            timeoutSeconds: 5
      terminationGracePeriodSeconds: 60
---
kind: Service
apiVersion: v1
metadata:
  name: ingress-nginx
  labels:
    app: ingress-nginx
spec:
  selector:
    app: ingress-nginx
  type: NodePort
  ports:
    - name: http
      port: 80
      protocol: TCP
