Cluster K8s/deployement/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: crud-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    #nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  rules:
  - host: crud-app.com
    http:
      paths:
        - path: /(.*)
          backend:
            serviceName: crudclient
            servicePort: 80
        - path: /restapi/(.*)
          backend:
            serviceName: crudserver
            servicePort: 8080
